--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,56 @@
-click==7.1.2
+Babel==2.3.4
+beautifulsoup4==4.9.3
+certifi==2020.12.5
+chardet==3.0.4
+click==8.0.3
+colorama==0.4.4
+decorator==4.0.10
+docutils==0.12
+ebaysdk==2.1.5
+feedparser==5.2.1
 Flask==1.1.2
-gunicorn==20.1.0
-itsdangerous==1.1.0
-Jinja2==2.11.2
+html2text==2016.9.19
+idna==2.7
+importlib-metadata==4.8.2
+itsdangerous==2.0.1
+Jinja2==2.10.1
+lxml==4.6.2
+Mako==1.0.4
 MarkupSafe==1.1.1
-Werkzeug==1.0.1
+mock==2.0.0
+num2words==0.5.6
+numpy==1.19.4
+ofxparse==0.16
+olefile==0.46
+pandas==1.1.5
+pandas-datareader==0.9.0
+passlib==1.6.5
+pbr==5.5.1
+Pillow==4.0.0
+psutil==5.6.3
+psycopg2==2.8.3
+pydot==1.2.3
+pyparsing==2.1.10
+PyPDF2==1.26.0
+pypiwin32==223
+pyserial==3.1.1
+python-dateutil==2.5.3
+python-stdnum==1.14
+pytz==2016.7
+pyusb==1.0.0
+pywin32==300
+PyYAML==3.12
+qrcode==5.3
+requests==2.20.0
+six==1.15.0
+soupsieve==2.1
+suds-jurko==0.6
+typing_extensions==4.0.0
+urllib3==1.24.3
+vatnumber==1.2
+vobject==0.9.3
+Werkzeug==0.16.0
+xlrd==1.0.0
+XlsxWriter==0.9.3
+xlwt==1.3.0
+zipp==3.6.0
