--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ pyparsing==2.1.10
 PyPDF2==1.26.0
 pypiwin32==223
 pyserial==3.1.1
-python-dateutil==2.5.3
+python-dateutil>=2.7.3
 python-stdnum==1.14
 pytz==2016.7
 pyusb==1.0.0
