--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ pypiwin32==223
 pyserial==3.1.1
 python-dateutil>=2.7.3
 python-stdnum==1.14
-pytz==2016.7
+pytz>=2017.2
 pyusb==1.0.0
 PyYAML==3.12
 qrcode==5.3
