--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,2 @@
-Babel==2.3.4
-beautifulsoup4==4.9.3
-certifi==2020.12.5
-chardet==3.0.4
-click==8.0.3
-colorama==0.4.4
-decorator==4.0.10
-docutils==0.12
-ebaysdk==2.1.5
-feedparser==5.2.1
-Flask==1.1.2
-html2text==2016.9.19
-idna==2.7
-importlib-metadata==4.8.2
-itsdangerous==2.0.1
-Jinja2==2.10.1
-lxml==4.6.2
-Mako==1.0.4
-MarkupSafe==1.1.1
-mock==2.0.0
-num2words==0.5.6
-numpy==1.19.4
-ofxparse==0.16
-olefile==0.46
-pandas==1.1.5
-pandas-datareader==0.9.0
-passlib==1.6.5
-pbr==5.5.1
-Pillow==4.0.0
-psutil==5.6.3
-psycopg2==2.8.3
-pydot==1.2.3
-pyparsing==2.1.10
-PyPDF2==1.26.0
-pyserial==3.1.1
-python-dateutil==2.7.3
-python-stdnum==1.14
-pyusb==1.0.0
+gunicorn==20.1.0
+unicorn==1.0.3
